tests/specs/check/check_workspace/check_config_flag.out
error: TS2304 [ERROR]: Cannot find name 'onmessage'.
onmessage;
~~~~~~~~~
    at file:///[WILDCARD]/main.ts:8:1

TS2304 [ERROR]: Cannot find name 'localStorage'.
localStorage;
~~~~~~~~~~~~
    at file:///[WILDCARD]/member/mod.ts:2:1

Found 2 errors.
